<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <TextView
        android:id="@+id/billText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tBill"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/middleGuide"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipPercText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tPerc"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/middleGuide"
        app:layout_constraintTop_toBottomOf="@+id/billText" />

    <TextView
        android:id="@+id/peopleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nPeople"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/middleGuide"
        app:layout_constraintTop_toBottomOf="@+id/tipPercText" />

    <Button
        android:id="@+id/calButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calc"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/middleGuide"
        app:layout_constraintStart_toStartOf="@+id/middleGuide"
        app:layout_constraintTop_toBottomOf="@+id/peopleText" />

    <TextView
        android:id="@+id/tipTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tPPerson"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/middleGuide"
        app:layout_constraintStart_toStartOf="@+id/middleGuide"
        app:layout_constraintTop_toBottomOf="@+id/calButton" />

    <EditText
        android:id="@+id/billDoubleField"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/billText"
        app:layout_constraintStart_toStartOf="@+id/middleGuide" />

    <EditText
        android:id="@+id/percIntField"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tipPercText"
        app:layout_constraintStart_toStartOf="@+id/middleGuide" />

    <EditText
        android:id="@+id/peopleIntField"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/peopleText"
        app:layout_constraintStart_toStartOf="@+id/middleGuide" />

    <TextView
        android:id="@+id/billFinalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/billFinal"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/middleGuide"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/middleGuide"
        app:layout_constraintTop_toBottomOf="@+id/tipTotalText" />
</androidx.constraintlayout.widget.ConstraintLayout>